Server now works without errors

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "seed": "cd server && npm run seed",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "watch": "nodemon"
   },
   "eslintConfig": {
     "extends": [
