--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "nodemon"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "mongoose": "^5.11.13",
     "mongoose-type-url": "^2.1.0",
     "nodemon": "^2.0.7"
+    
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
