--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apollo-server-express": "^3.10.1",
     "bcrypt": "^5.0.1",
+    "concurrently": "^7.3.0",
     "express": "^4.18.1",
     "faker": "^5.5.3",
     "graphql": "^16.5.0",
@@ -52,6 +53,6 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^7.3.0"
+    
   }
 }
